peac_dev/force-app/main/default/objects/Doc_Fee_Rule__c/Doc_Fee_Rule__c.object-meta.xml
<CustomObject>
    <label>Doc Fee Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Doc Fee Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doc Fee Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>