peac_dev/force-app/main/default/objects/Doc_Fee_Rule__c/fields/Apex_Class_Define_Entry_Criteria_Value__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Define_Entry_Criteria_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apex Class Define Entry Criteria &amp; Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>