peac_dev/force-app/main/default/objects/Doc_Fee_Rule__c/fields/Doc_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee_Amount__c</fullName>
    <label>Doc Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>