peac_dev/force-app/main/default/objects/Doc_Fee_Rule__c/fields/Rule_Config__c.field-meta.xml
<CustomField>
    <fullName>Rule_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule Config</label>
    <referenceTo>TCRE__Rule_Config__c</referenceTo>
    <relationshipLabel>Doc Fee Rules</relationshipLabel>
    <relationshipName>Doc_Fee_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>